--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -43,6 +43,9 @@ dependencies = [
     "jsonschema>=4.17.0",
     "langflow>=1.5.0",  # Required for component execution
     "python-dotenv>=1.0.0",  # For .env file support
+    "openai>=1.0.0",  # For OpenAI API integration
+    "langchain_core>=0.1.0",  # For core LangChain functionality
+    "langchain_openai>=0.1.0",  # For LangChain OpenAI integration
 ]
 
 [dependency-groups]
@@ -153,6 +156,10 @@ docstring-code-format = true
 # types-* packages are type stubs for mypy and not directly imported
 ignore = ["DEP002"]
 extend_exclude = ["types-PyYAML"]
+
+[tool.deptry.package_module_name_map]
+python-dotenv = ["dotenv"]
+pyyaml = ["yaml"]
 
 [tool.mypy]
 python_version = "3.11"
