fix: Add langflow to CI; fix conversions
Some optional fields (`steps`, `onSkip`, `onError`) needed to made
explicitly optional to avoid the following problem:

1. Python sets them to `null` in the JSON.
2. Rust fails to deserialize them since `null` is not a valid value.

Eg., Rust deserialization handled the *omitted* value with the default
but not the null. By making them `Option<T>`, null and omtited become
`None` which can then be explicitly handled as the `T::default()`.

--- a/.github/actions/langflow-checks/action.yml
+++ b/.github/actions/langflow-checks/action.yml
@@ -41,12 +41,8 @@ runs:
       run: cargo build
       working-directory: stepflow-rs
 
-    - name: Install Langflow dependencies
-      shell: bash
-      run: uv sync
-      working-directory: integrations/langflow
-
     # Run Langflow integration checks using the shared script
+    # Note: The script handles its own dependency installation
     - name: Run Langflow integration checks
       shell: bash
       run: ./scripts/check-langflow.sh
