--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "msgspec>=0.19.0",
     "click>=8.0",
     "jsonschema>=4.17.0",
+    "pydantic>=2.0.0", # For BaseModel serialization and SecretStr handling
     "langflow>=1.5.0", # Required for component execution
     "python-dotenv>=1.0.0", # For .env file support
     "openai>=1.0.0", # For OpenAI API integration
@@ -62,6 +63,7 @@ dev = [
     "types-PyYAML>=6.0.0",
     "httpx>=0.25.0", # For testing HTTP components
     "black>=25.1.0",
+    "psutil>=5.9.0", # For memory monitoring in OOM tests
 ]
 
 [project.urls]
