--- a/stepflow-rs/crates/stepflow-analysis/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-analysis/Cargo.toml
@@ -23,6 +23,7 @@ schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
+stepflow-plugin.workspace = true
 utoipa.workspace = true
 thiserror.workspace = true
 
