feat: Restart stdio subprocess; retry components
This closes #335.
This relates to #334 but doesn't implement full retry logic.

--- a/tests/python/stepflow-config.yml
+++ b/tests/python/stepflow-config.yml
@@ -6,6 +6,7 @@ plugins:
     transport: stdio
     command: uv
     args: [--project, "../../sdks/python", run, stepflow_py]
+    max_retries: 3
 routes:
   "/python/{component}":
     - plugin: python
