feat: protocol support for batch execution
Implements protocol-level handlers for batch execution methods that
components can call back to the runtime, completing the batch execution
context API.

Changes:
  - Protocol handlers: Add SubmitBatchHandler and GetBatchHandler in
    stepflow-protocol/src/handlers/flow_handlers.rs
  - Handler registration: Register batch methods in message_handler.rs
  - Python SDK: Update message_decoder.py to recognize batch methods
    (flows/submit_batch, flows/get_batch)
  - Test updates: Add batch method stubs to MockContext implementations
    in http/client.rs and http_integration_test.rs
  - Dependencies: Add chrono to stepflow-protocol dev-dependencies
  - Schemas: Regenerate protocol schemas and Python types

Both built-in and Python map components now successfully use batch
execution API via bidirectional communication:
  - Built-in map: Uses context.execute_batch() (Rust)
  - Python map: Uses context.evaluate_batch_by_id() (Python)

--- a/stepflow-rs/crates/stepflow-execution/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-execution/Cargo.toml
@@ -30,6 +30,7 @@ thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 uuid.workspace = true
+chrono.workspace = true
 
 [dev-dependencies]
 stepflow-mock.workspace = true
