--- a/stepflow-rs/crates/stepflow-state/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state/Cargo.toml
@@ -18,6 +18,7 @@ doctest = false
 [dependencies]
 bit-set.workspace = true
 chrono.workspace = true
+dashmap.workspace = true
 error-stack.workspace = true
 futures.workspace = true
 serde.workspace = true
