--- a/.github/workflows/release_rust.yml
+++ b/.github/workflows/release_rust.yml
@@ -102,30 +102,44 @@ jobs:
             ${{ runner.os }}-${{ matrix.target }}-cargo-release-
             ${{ runner.os }}-${{ matrix.target }}-cargo-
 
-      - name: Build binary (native)
+      - name: Build binaries (native)
         if: ${{ !matrix.cross }}
         working-directory: stepflow-rs
-        run: cargo build --release --target ${{ matrix.target }} --bin stepflow
+        run: |
+          cargo build --release --target ${{ matrix.target }} --bin stepflow --bin stepflow-server --bin stepflow-load-balancer
 
-      - name: Build binary (cross)
+      - name: Build binaries (cross)
         if: matrix.cross
         working-directory: stepflow-rs
-        run: cross build --release --target ${{ matrix.target }} --bin stepflow
+        run: |
+          cross build --release --target ${{ matrix.target }} --bin stepflow --bin stepflow-server --bin stepflow-load-balancer
 
-      - name: Package binary (Unix)
+      - name: Package binaries (Unix)
         if: matrix.os != 'windows-2022'
         working-directory: stepflow-rs
         run: |
           mkdir -p artifacts
-          cp target/${{ matrix.target }}/release/stepflow artifacts/stepflow-${{ matrix.target }}
-          chmod +x artifacts/stepflow-${{ matrix.target }}
 
-      - name: Package binary (Windows)
+          # Copy all three binaries
+          cp target/${{ matrix.target }}/release/stepflow artifacts/stepflow-${{ matrix.target }}
+          cp target/${{ matrix.target }}/release/stepflow-server artifacts/stepflow-server-${{ matrix.target }}
+          cp target/${{ matrix.target }}/release/stepflow-load-balancer artifacts/stepflow-load-balancer-${{ matrix.target }}
+
+          # Make executable
+          chmod +x artifacts/stepflow-${{ matrix.target }}
+          chmod +x artifacts/stepflow-server-${{ matrix.target }}
+          chmod +x artifacts/stepflow-load-balancer-${{ matrix.target }}
+
+      - name: Package binaries (Windows)
         if: matrix.os == 'windows-2022'
         working-directory: stepflow-rs
         run: |
           mkdir artifacts
+
+          REM Copy all three binaries
           copy target\${{ matrix.target }}\release\stepflow.exe artifacts\stepflow-${{ matrix.target }}.exe
+          copy target\${{ matrix.target }}\release\stepflow-server.exe artifacts\stepflow-server-${{ matrix.target }}.exe
+          copy target\${{ matrix.target }}\release\stepflow-load-balancer.exe artifacts\stepflow-load-balancer-${{ matrix.target }}.exe
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -313,47 +327,10 @@ jobs:
         run: |
           docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
 
-
-  verify-artifacts:
-    name: Verify All Artifacts
-    runs-on: ubuntu-22.04
-    needs: [build-binaries, merge-multiplatform]
-
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./all-artifacts
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          pattern: stepflow-*
-          merge-multiple: true
-
-      - name: List all artifacts
-        run: |
-          echo "Built artifacts:"
-          find ./all-artifacts -type f -exec ls -la {} \;
-
-      - name: Verify binary count
-        run: |
-          binary_count=$(find ./all-artifacts -name "stepflow-*" -type f | wc -l)
-          echo "Total binaries built: $binary_count"
-          if [ "$binary_count" -ne 7 ]; then
-            echo "Expected 7 binaries but found $binary_count"
-            exit 1
-          fi
-          echo "All expected binaries were built successfully"
-
-      - name: Test binaries (Linux only)
-        run: |
-          # Test the x86_64 Linux binary
-          chmod +x ./all-artifacts/stepflow-x86_64-unknown-linux-gnu
-          ./all-artifacts/stepflow-x86_64-unknown-linux-gnu --version || echo "Version command not available"
-          ./all-artifacts/stepflow-x86_64-unknown-linux-gnu --help | head -10
-
   create-tag-and-release:
     name: Create Tag and Release
     runs-on: ubuntu-22.04
-    needs: [determine-version, verify-artifacts]
+    needs: [determine-version, build-binaries, merge-multiplatform]
     if: needs.determine-version.outputs.skip_tag == 'false'
     permissions:
       contents: write
@@ -374,18 +351,35 @@ jobs:
           mkdir -p ./archives
           cd ./release-artifacts
 
-          # Create tar.gz archives for Unix binaries
-          for binary in stepflow-x86_64-unknown-linux-gnu stepflow-aarch64-unknown-linux-gnu stepflow-x86_64-unknown-linux-musl stepflow-aarch64-unknown-linux-musl stepflow-x86_64-apple-darwin stepflow-aarch64-apple-darwin; do
-            if [ -f "$binary" ]; then
-              tar -czf "../archives/${binary}.tar.gz" "$binary"
-              echo "Created archive for $binary"
+          # Create tar.gz archives for Unix targets (include all three binaries)
+          for target in x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu x86_64-unknown-linux-musl aarch64-unknown-linux-musl x86_64-apple-darwin aarch64-apple-darwin; do
+            binaries=""
+            for binary_name in stepflow stepflow-server stepflow-load-balancer; do
+              binary="${binary_name}-${target}"
+              if [ -f "$binary" ]; then
+                binaries="$binaries $binary"
+              fi
+            done
+
+            if [ -n "$binaries" ]; then
+              tar -czf "../archives/stepflow-${target}.tar.gz" $binaries
+              echo "Created archive for ${target} with binaries:$binaries"
             fi
           done
 
-          # Create zip archive for Windows binary
-          if [ -f "stepflow-x86_64-pc-windows-msvc.exe" ]; then
-            zip "../archives/stepflow-x86_64-pc-windows-msvc.zip" "stepflow-x86_64-pc-windows-msvc.exe"
-            echo "Created archive for Windows binary"
+          # Create zip archive for Windows target (include all three binaries)
+          target="x86_64-pc-windows-msvc"
+          binaries=""
+          for binary_name in stepflow stepflow-server stepflow-load-balancer; do
+            binary="${binary_name}-${target}.exe"
+            if [ -f "$binary" ]; then
+              binaries="$binaries $binary"
+            fi
+          done
+
+          if [ -n "$binaries" ]; then
+            zip "../archives/stepflow-${target}.zip" $binaries
+            echo "Created archive for Windows with binaries:$binaries"
           fi
 
       - name: Create release notes
@@ -395,7 +389,10 @@ jobs:
 
           📋 **[View Release Changelog](https://github.com/${{ github.repository }}/blob/main/stepflow-rs/CHANGELOG.md#${{ needs.determine-version.outputs.version }})** | **[Full Changelog](https://github.com/${{ github.repository }}/blob/main/stepflow-rs/CHANGELOG.md)**
 
-          This release includes pre-built binaries for multiple platforms:
+          This release includes pre-built binaries for multiple platforms. Each archive contains three binaries:
+          - `stepflow` - CLI tool for running workflows
+          - `stepflow-server` - HTTP server for workflow execution
+          - `stepflow-load-balancer` - Load balancer for distributed deployments
 
           ### 📥 Download Binaries
 
@@ -415,15 +412,15 @@ jobs:
           - [stepflow-x86_64-pc-windows-msvc.zip](https://github.com/${{ github.repository }}/releases/download/${{ needs.determine-version.outputs.tag }}/stepflow-x86_64-pc-windows-msvc.zip)
 
           ### 🐳 Docker Images
-          Docker images are also available at `ghcr.io/${{ github.repository }}`:
+          Docker images are also available at `ghcr.io/${{ github.repository }}` (CLI only):
           - `ghcr.io/${{ github.repository }}:debian-${{ needs.determine-version.outputs.version }}`
           - `ghcr.io/${{ github.repository }}:alpine-${{ needs.determine-version.outputs.version }}`
 
           ### 📦 Installation
-          1. Download the appropriate binary for your platform using the links above
+          1. Download the appropriate archive for your platform using the links above
           2. Extract the archive: `tar -xzf stepflow-*.tar.gz` (or unzip for Windows)
-          3. Make the binary executable (Unix): `chmod +x stepflow-*`
-          4. Move to a directory in your PATH or run directly
+          3. Make binaries executable (Unix): `chmod +x stepflow-* stepflow-server-* stepflow-load-balancer-*`
+          4. Move the binaries to a directory in your PATH or run directly
           EOF
 
       - name: Create GitHub release with tag
@@ -440,7 +437,7 @@ jobs:
   summary:
     name: Build Summary
     runs-on: ubuntu-22.04
-    needs: [determine-version, build-binaries, build-docker, merge-multiplatform, verify-artifacts, create-tag-and-release]
+    needs: [determine-version, build-binaries, build-docker, merge-multiplatform, create-tag-and-release]
     if: always()
 
     steps:
@@ -467,12 +464,6 @@ jobs:
             echo "| Multi-platform |  Success |" >> $GITHUB_STEP_SUMMARY
           else
             echo "| Multi-platform | L Failed |" >> $GITHUB_STEP_SUMMARY
-          fi
-
-          if [ "${{ needs.verify-artifacts.result }}" = "success" ]; then
-            echo "| Verification |  Success |" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "| Verification | L Failed |" >> $GITHUB_STEP_SUMMARY
           fi
 
           if [ "${{ needs.determine-version.outputs.skip_tag }}" = "false" ]; then
