ci: change artifact names
Theory: The name `stepflow-` was also matching the results of dockerbuilds:

```
- stepflow-ai~stepflow~GTVB3J.dockerbuild (ID: 4221265994, Size: 35786, Expected Digest: sha256:ab301233b6750405e43b5b8f9ab15fc8c66f41f855aac6c642014a9e142dccf9)
- stepflow-ai~stepflow~ISNBPH.dockerbuild (ID: 4221260810, Size: 31062, Expected Digest: sha256:922c8a446d9c1b7e047efd7be58c7f2993374a37c71ec9ae84c00118d42daf97)
- stepflow-ai~stepflow~JXIM1U.dockerbuild (ID: 4221259604, Size: 32868, Expected Digest: sha256:dd4a57d81ebdaa3d72a805ab3571acf3fa5ab8cbe471a26596d4363bd956bfe0)
- stepflow-ai~stepflow~EMIRYJ.dockerbuild (ID: 4221259182, Size: 30996, Expected Digest: sha256:eab77c4657510c00825f1ad7bb1eed772efa1e5957f7963cff6ccdc17d59ebcc)
```

But those artifacts cause problems when downloading because they're not zip files:
https://github.com/actions/download-artifact/issues/328#issuecomment-2199704064

Rather than using an alternative download action, this just names the artifacts differently
so the dockerbuild files shouldn't match.

--- a/.github/workflows/release_rust.yml
+++ b/.github/workflows/release_rust.yml
@@ -150,7 +150,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: stepflow-${{ matrix.target }}
+          name: artifact-stepflow-${{ matrix.target }}
           path: stepflow-rs/artifacts/stepflow-${{ matrix.target }}*
           retention-days: 7
 
@@ -206,7 +206,7 @@ jobs:
       - name: Download required binary
         uses: actions/download-artifact@v4
         with:
-          name: stepflow-${{ matrix.binary-target }}
+          name: artifact-stepflow-${{ matrix.binary-target }}
           path: ./binary/
 
       - name: Prepare binary
@@ -349,7 +349,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: ./release-artifacts
-          pattern: stepflow-*
+          pattern: artifact-stepflow-*
           merge-multiple: true
 
       - name: Create release archives
