feat: upgrade langflow integration to 1.6.4 with lfx support
Upgrade Langflow from 1.5.0.post2 to 1.6.4 and add support for the new lfx
package split architecture. This includes updates to handle cross-package type
compatibility, improved serialization, and enhanced error diagnostics.

- Update pyproject.toml: langflow>=1.6.4, add lfx~=0.1.0 dependency
- Update uv.lock with new dependencies
- Regenerate test fixtures using update_fixtures.py script
- Add LAST_UPDATED.json metadata for fixture tracking

**Type Conversion (type_converter.py)**
- Support both langflow and lfx DataFrame types during serialization
- Prefer lfx DataFrame for deserialization (modern component compatibility)
- Add cross-package Message conversion (lfx → langflow)
- Remove backward compatibility for old DataFrame "data" format
- Simplify to only support new "json_data" columnar split format (~45% size savings)

**Graph Context (udf_executor.py)**
- Add vertices attribute to GraphContext for lfx Agent compatibility
- Use __dict__ assignment to bypass read-only property restrictions
- Add EnhancedPlaceholderGraph with vertices for lfx components

**Path Resolution (translator.py, node_processor.py)**
- Update code blob path format: langflow_<component>_blob → langflow_<node_id>_blob
- Add comprehensive error handling for unsupported step references
- Preserve original Langflow node IDs in Stepflow step IDs

**Tweaks System (stepflow_tweaks.py)**
- Update documentation to clarify tweak format and usage
- Improve error messages for better debugging

**Environment Configuration (test_example_flows.py)**
- Add OPENAI_API_KEY to plugin environment for Embeddings serialization
- Fix component ID in vector_store_rag test (Wqbva → cAjdO)
- Required because TypeConverter resolves SecretStr env vars during serialization

**Test Utilities**
- Update TweaksBuilder to handle new component patterns
- Add update_fixtures.py script for regenerating test fixtures
- Update config_builder to support new Langflow

--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -36,13 +36,14 @@ classifiers = [
 ]
 
 dependencies = [
-    "stepflow-py>=0.4.0",
+    "stepflow-py>=0.6.0",
     "pyyaml>=6.0",
     "msgspec>=0.19.0",
     "click>=8.0",
     "jsonschema>=4.17.0",
     "pydantic>=2.0.0", # For BaseModel serialization and SecretStr handling
-    "langflow==1.5.0.post2", # Pinned to known working version
+    "langflow>=1.6.4", # Updated to 1.6.4 or higher
+    "lfx~=0.1.0",
     "python-dotenv>=1.0.0", # For .env file support
     "openai>=1.0.0", # For OpenAI API integration
     "langchain_core>=0.1.0", # For core LangChain functionality
