--- a/integrations/langflow/pyproject.toml
+++ b/integrations/langflow/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "pydantic>=2.0.0", # For BaseModel serialization and SecretStr handling
     "langflow-nightly==1.6.4.dev5", # Update to 1.6.5 when available
     "lfx-nightly==0.1.12.dev39",    # Update to match langflow
+    "pandas>=2.0.0", # For DataFrame serialization and deserialization
     "python-dotenv>=1.0.0", # For .env file support
     "openai>=1.0.0", # For OpenAI API integration
     "langchain_core>=0.1.0", # For core LangChain functionality
@@ -62,6 +63,7 @@ dev = [
     "mypy>=1.8.0",
     "deptry>=0.22.0",
     "types-PyYAML>=6.0.0",
+    "pandas-stubs>=2.0.0",
     "httpx>=0.25.0", # For testing HTTP components
     "black>=25.1.0",
     "psutil>=5.9.0", # For memory monitoring in OOM tests
@@ -164,6 +166,8 @@ extend_exclude = ["types-PyYAML"]
 [tool.deptry.package_module_name_map]
 python-dotenv = ["dotenv"]
 pyyaml = ["yaml"]
+langflow-nightly = ["langflow"]
+lfx-nightly = ["lfx"]
 
 [tool.mypy]
 python_version = "3.11"
